--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- ✅ Load Google Identity Services Library -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
